# massively

./: .gitignore  AGENTS.md  CONCEPT.md  Cargo.toml  PERFORMANCE.md  README.md  justfile
crates/graph-algorithms/: Cargo.toml  README.md
crates/graph-algorithms/benches/: algorithms.rs
crates/graph-algorithms/benches/common/: mod.rs
crates/graph-algorithms/src/: bc.rs  bfs.rs  color.rs  common.rs  forman_ricci.rs  geo.rs  hits.rs  kcore.rs  lib.rs  mst.rs  ppr.rs  pr.rs  spgemm.rs  spmv.rs  sssp.rs  tc.rs
crates/graph-algorithms/tests/: oracle.rs
crates/massively/: Cargo.toml
crates/massively/benches/: algorithms.rs  by_key_patterns.rs  gather.rs  ordering.rs  ordering_query.rs  predicate_query.rs  reduce.rs  reduce_4g.rs  scan.rs  scatter.rs  search.rs  seg.rs  select.rs  sort.rs  transform.rs  transform_reduce.rs  where_indexed.rs
crates/massively/benches/common/: mod.rs
crates/massively/examples/: README.md  adjacent_difference.rs  adjacent_find.rs  all_of.rs  any_of.rs  common.rs  copy_if.rs  count_if.rs  equal.rs  equal_range.rs  exclusive_scan.rs  exclusive_scan_by_key.rs  find_first_of.rs  find_if.rs  gather.rs  gather_if.rs  inclusive_scan.rs  inclusive_scan_by_key.rs  inner_product.rs  is_partitioned.rs  is_sorted.rs  is_sorted_until.rs  lexicographical_compare.rs  lower_bound.rs  max_element.rs  merge.rs  merge_by_key.rs  min_element.rs  minmax_element.rs  mismatch.rs  none_of.rs  partition.rs  reduce.rs  reduce_by_key.rs  remove_if.rs  replace_if.rs  reverse.rs  scatter.rs  scatter_if.rs  set_difference.rs  (+10 more)
crates/massively/examples/algorithm/: adjacent_difference.rs  adjacent_find.rs  all_of.rs  any_of.rs  common.rs  copy_if.rs  copy_where.rs  count_if.rs  equal.rs  equal_range.rs  exclusive_scan.rs  exclusive_scan_by_key.rs  fill.rs  find_first_of.rs  find_if.rs  gather.rs  gather_if.rs  gather_where.rs  inclusive_scan.rs  inclusive_scan_by_key.rs  inner_product.rs  is_partitioned.rs  is_sorted.rs  is_sorted_until.rs  lexicographical_compare.rs  lower_bound.rs  map.rs  max_element.rs  merge.rs  merge_by_key.rs  min_element.rs  minmax_element.rs  mismatch.rs  none_of.rs  partition.rs  permute.rs  reduce.rs  reduce_by_key.rs  remove_if.rs  remove_where.rs  (+17 more)
crates/massively/examples/runtime/: alloc.rs  common.rs  constant.rs  copy.rs  counting.rs  filled.rs  full.rs  random.rs  tabulate.rs  to_device.rs
crates/massively/examples/slice/: common.rs  constant.rs  transform.rs
crates/massively/examples/util/: random.rs
crates/massively/src/: __bench.rs  api.rs  error.rs  graph.rs  index.rs  lazy.rs  lib.rs  op.rs  random.rs
crates/massively/src/algorithm/: api.rs  mod.rs  op.rs  soa.rs  traits.rs
crates/massively/src/api/: gather.rs  iter.rs  lazy.rs  memory.rs  mod.rs  op.rs  ordering.rs  reduce.rs  scan.rs  scatter.rs  search.rs  selection.rs  sequence.rs  tuple.rs
crates/massively/src/core/: allocation.rs  arg_reduce.rs  arity.rs  by_key.rs  eval.rs  facade.rs  indexed.rs  iter.rs  masked.rs  merge.rs  mod.rs  op.rs  ordering.rs  output.rs  predicate.rs  read.rs  reduce.rs  reduce_fixed.rs  runtime.rs  scan.rs  scatter.rs  scatter_reduce.rs  search.rs  segmented.rs  segmented_fixed.rs  selection.rs  set.rs  storage.rs  transform.rs
crates/massively/src/detail/: launch.rs  mod.rs  op.rs  op_adapter.rs  write.rs
crates/massively/src/device/: expr.rs  mod.rs  vec.rs
crates/massively/src/expr/: mod.rs
crates/massively/src/graph/: control.rs  expr.rs  intersection.rs  traversal.rs
crates/massively/src/iter/: mod.rs
crates/massively/src/kernels/: expr.rs  ordering.rs  range.rs  scan.rs  selection.rs
crates/massively/src/policy/: backends.rs
crates/massively/src/primitives/: mod.rs  range.rs  reduce.rs  scan.rs  search.rs  segmented.rs  select.rs
crates/massively/src/runtime/: device_vec.rs  executor.rs  mod.rs  op.rs
crates/massively/src/seg/: control.rs  mod.rs
crates/massively/src/slice/: device.rs  lazy.rs  lowering.rs  mod.rs  op.rs  traits.rs
crates/massively/src/util/: mod.rs  random.rs
crates/massively/src/value/: mod.rs
crates/massively/tests/: api.rs  arity.rs  csa_invariants.rs  facade.rs  oracle.proptest-regressions  oracle.rs  oracle_scale.rs  oracle_seg.rs
crates/massively/tests/api/: adjacent_difference.rs  adjacent_find.rs  copy_if.rs  copy_where.rs  count_if.rs  device_slice.rs  eager.rs  equal.rs  equal_range.rs  exclusive_scan.rs  exclusive_scan_by_key.rs  fill.rs  find_first_of.rs  find_if.rs  gather.rs  gather_if.rs  gather_where.rs  inclusive_scan.rs  inclusive_scan_by_key.rs  inner_product.rs  is_partitioned.rs  is_sorted.rs  is_sorted_until.rs  iter.rs  lazy.rs  lazy_transform_consumers.rs  lexicographical_compare.rs  lower_bound.rs  merge.rs  merge_by_key.rs  minmax_element.rs  mismatch.rs  mslice_soa.rs  partition.rs  predicate.rs  random.rs  reduce.rs  reduce_by_key.rs  remove_if.rs  remove_where.rs  (+22 more)
crates/massively/tests/common/: mod.rs
crates/massively/tests/graph/: oracle.rs
crates/massively/tests/oracle/: arity.rs  arity_value.rs  by_key.rs  common.rs  ordering.rs  scalar.rs
crates/massively/tests/oracle_scale/: arity.rs  common.rs  full.rs  (+1 more)
crates/oracle/: Cargo.toml
crates/oracle/src/: adjacent_difference.rs  all_of.rs  copy_if.rs  copy_where.rs  count_if.rs  equal_range.rs  find_first_of.rs  gather_if.rs  gather_where.rs  inclusive_scan_by_key.rs  inner_product.rs  is_partitioned.rs  is_sorted.rs  is_sorted_until.rs  lib.rs  lower_bound.rs  merge.rs  merge_by_key.rs  mismatch.rs  none_of.rs  op.rs  remove_if.rs  replace_if.rs  reverse.rs  scatter.rs  scatter_if.rs  scatter_where.rs  seg.rs  sort_by_key.rs  transform.rs  unique.rs  upper_bound.rs
crates/oracle/tests/: api.rs  scale.rs  seg.rs
traversal-algebra/oracle/: Cargo.toml  README.md
traversal-algebra/oracle/src/: client.rs  cost.rs  cpu.rs  generated.rs  graph.rs  lib.rs  protocol.rs
traversal-algebra/oracle/tests/: conformance.rs
verification/massively/oracle/: Cargo.toml
verification/traversal-algebra/graph-algorithms/: Cargo.toml  README.md
verification/traversal-algebra/oracle/: Cargo.toml  README.md
(+658 files in other folders)
