[workspace]
members = [
    "crates/massively",
    "crates/oracle",
]
resolver = "3"

[workspace.package]
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/akiradeveloper/massively"

[workspace.dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl.git", branch = "main", default-features = true }
