[workspace]
members = [
    "crates/graph-algorithms",
    "crates/massively",
    "crates/oracle",
]
resolver = "3"

[workspace.package]
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/akiradeveloper/massively"

[workspace.dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl.git", branch = "main", default-features = false, features = [
    "std",
    "stdlib",
] }

# The arity-indexed CubeCL kernels deliberately cover the full read/storage
# product. Debug metadata and concurrent rustc processes multiply the peak
# memory of that generated code without affecting runtime diagnostics.
[profile.dev]
debug = 0
incremental = false

[profile.test]
debug = 0
incremental = false
