[package]
autotests = false
authors.workspace = true
description = "Graph algorithms composed from Massively GPU primitives."
edition.workspace = true
license.workspace = true
name = "graph-algorithms"
publish = false
readme = "README.md"
repository.workspace = true
version = "0.1.0"

[dependencies]
cubecl.workspace = true
massively = { path = "../massively", default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "algorithms"
harness = false

[[test]]
name = "oracle"
path = "tests/oracle.rs"

[features]
default = ["wgpu"]
cuda = ["cubecl/cuda", "massively/cuda"]
hip = ["cubecl/hip", "massively/hip"]
wgpu = ["cubecl/wgpu", "massively/wgpu"]
