[package]
autotests = false
authors.workspace = true
description = "Multi-platform GPU parallel algorithms for Rust."
edition.workspace = true
license.workspace = true
name = "massively"
readme = "../../README.md"
repository.workspace = true
version = "0.71.0"

[dependencies]
cubecl.workspace = true
futures-lite = "2.6"

[dev-dependencies]
criterion = "0.5"
oracle_ref = { package = "oracle", path = "../oracle" }
proptest = "1"
static_assertions = "1"

[[test]]
name = "vector_api"
path = "tests/vector/api.rs"

[[test]]
name = "vector_oracle"
path = "tests/vector/oracle.rs"

[[test]]
name = "vector_oracle_scale"
path = "tests/vector/oracle_scale.rs"

[[test]]
name = "seg_api"
path = "tests/seg/api.rs"

[[test]]
name = "seg_oracle"
path = "tests/seg/oracle.rs"

[[bench]]
name = "transform_reduce"
harness = false

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "reduce"
harness = false

[[bench]]
name = "reduce_4g"
harness = false

[[bench]]
name = "select"
harness = false

[[bench]]
name = "gather"
harness = false

[[bench]]
name = "scatter"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "where_indexed"
harness = false

[[bench]]
name = "by_key_patterns"
harness = false

[[bench]]
name = "ordering"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "predicate_query"
harness = false

[[bench]]
name = "ordering_query"
harness = false

[[bench]]
name = "seg"
harness = false

[features]
default = ["wgpu"]
cuda = ["cubecl/cuda"]
hip = ["cubecl/hip"]
wgpu = ["cubecl/wgpu"]
