[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "oracle"
publish = false
repository.workspace = true
version = "0.1.0"

[dependencies]

[dev-dependencies]
cubecl = { version = "0.9.0", default-features = true }
massively = { path = "../massively" }
proptest = "1"
