[package]
autotests = false
authors.workspace = true
description = "Independent CPU references and property comparisons for Massively."
edition.workspace = true
license.workspace = true
name = "oracle"
publish = false
repository.workspace = true
version = "0.1.0"

[lib]
name = "oracle"

[dependencies]

[dev-dependencies]
cubecl = { workspace = true, features = ["wgpu"] }
massively = { path = "../../../massively" }
proptest = "1"

[[test]]
name = "vector"
path = "tests/vector/mod.rs"

[[test]]
name = "vector_scale"
path = "tests/vector_scale/mod.rs"

[[test]]
name = "seg"
path = "tests/seg.rs"
