[package]
autotests = false
authors.workspace = true
description = "Complete graph algorithms demonstrating Massively's Traversal Algebra."
edition.workspace = true
license.workspace = true
name = "graph-algorithms"
publish = false
readme = "README.md"
repository.workspace = true
version = "0.1.0"

[dependencies]
cubecl.workspace = true
massively = { path = "../../../massively" }

[dev-dependencies]
criterion = "0.5"
cubecl = { workspace = true, features = ["wgpu"] }
proptest = "1"

[[bench]]
name = "algorithms"
harness = false

[[test]]
name = "oracle"
path = "tests/oracle.rs"
