[package]
autotests = false
authors.workspace = true
description = "Independent sequential CPU oracle for Massively Traversal Algebra conformance."
edition.workspace = true
license.workspace = true
name = "traversal-algebra-oracle"
publish = false
repository.workspace = true
version = "0.1.0"

[dev-dependencies]
cubecl = { workspace = true, features = ["wgpu"] }
massively = { path = "../../../massively" }
proptest = "1"

[[test]]
name = "conformance"
path = "tests/conformance.rs"
